--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@react-three/fiber": "^6.2.2",
     "@types/react": "^17.0.9",
+    "@types/three": "^0.129.1",
+    "prettier": "^2.3.0",
+    "three": "^0.129.0",
     "typescript": "^4.3.2"
   }
 }
