--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "@react-three/fiber": "^6.2.2",
     "@types/react": "^17.0.9",
     "@types/three": "^0.129.1",
+    "autoprefixer": "^10.2.6",
+    "postcss": "^8.3.0",
     "prettier": "^2.3.0",
+    "tailwindcss": "^2.1.4",
     "three": "^0.129.0",
     "typescript": "^4.3.2"
   }
