--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@react-spring/core": "^9.2.1",
+    "@react-spring/three": "^9.2.1",
+    "@react-three/drei": "^5.3.1",
     "@react-three/fiber": "^6.2.2",
     "@types/react": "^17.0.9",
     "@types/three": "^0.129.1",
